--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ; Title: index.html 
 ; Author: Chris Gorham
 ; Date Created: 11 Jan 2023
-; Last Updated: 04 Feb 2023
+; Last Updated: 11 Feb 2023
 ; Description: The code for the Florence Mae Gifts Landing Page (index.html)
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
@@ -174,7 +174,7 @@
                 </div>
                 <div class="column">
 
-                  <img class="examples" id="example30" src="images/example30.jpg" alt="Dragonball Z Inspired Kid Gohan Baby Crochet Hat">
+                  <img class="examples" id="example30" src="images/example30.jpg" alt="Dragonball Z Inspired Kid Gohan Crochet Baby Hat">
 
                   <script>
                     // Get the modal
@@ -199,7 +199,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example7" src="images/example7.png" alt="Deku Link from Legend of Zelda: Majoras' Mask">
+                  <img class="examples" id="example7" src="images/example7.png" alt="Deku Link from Legend of Zelda: Majoras' Mask Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -224,7 +224,7 @@
                     }
                     </script>
 
-                    <img class="examples" id="example32" src="images/example32.jpeg" alt="Winnie the Pooh Inspired Baby Set" width="70%">
+                    <img class="examples" id="example32" src="images/example32.jpeg" alt="Winnie the Pooh Inspired Crochet Baby Set" width="70%">
                                       
                     <script>
                       // Get the modal
@@ -249,7 +249,7 @@
                       }
                       </script>
 
-                    <img id="example20" src="images/example20.png" alt="Custom Made Cthulhu with Roller Skates">
+                    <img id="example20" src="images/example20.png" alt="Custom Made Cthulhu with Roller Skates Amigurumi Doll">
 
                     <script>
                       // Get the modal
@@ -274,7 +274,7 @@
                       }
                       </script>
 
-                      <img class="examples" id="example3" src="images/example3.png" alt="Dory from Finding Nemo">
+                      <img class="examples" id="example3" src="images/example3.png" alt="Dory from Finding Nemo Amigurumi Doll">
                                         
                       <script>
                         // Get the modal
@@ -302,7 +302,7 @@
                 </div>
                 <div class="column">
 
-                  <img class="examples" id="example16" src="images/example16.png" alt="Baby Donald Duck">
+                  <img class="examples" id="example16" src="images/example16.png" alt="Baby Donald Duck Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -327,7 +327,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example2" src="images/example2.jpeg" alt="An Original Character Creation - Gordie the Giraffe">
+                  <img class="examples" id="example2" src="images/example2.jpeg" alt="An Original Character Creation - Gordie the Giraffe Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -352,7 +352,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example17" src="images/example17.png" alt="Charmander from Pokémon with attached Poké Ball">
+                  <img class="examples" id="example17" src="images/example17.png" alt="Charmander from Pokémon with attached Poké Ball Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -377,7 +377,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example4" src="images/example4.jpeg" alt="An Original Character Creation - Maurice the Mallard">
+                  <img class="examples" id="example4" src="images/example4.jpeg" alt="An Original Character Creation - Maurice the Mallard Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -402,7 +402,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example15" src="images/example15.png" alt="Vileplume from Pokémon">
+                  <img class="examples" id="example15" src="images/example15.png" alt="Vileplume from Pokémon Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -430,7 +430,7 @@
                 </div>
                 <div class="column">
 
-                  <img class="examples" id="example31" src="images/example31.jpeg" alt="Baby Santa Diaper Cover Set">
+                  <img class="examples" id="example31" src="images/example31.jpeg" alt="Baby Santa Crochet Diaper Cover Set">
 
                   <script>
                     // Get the modal
@@ -455,7 +455,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example19" src="images/example19.jpeg" alt="An Original Character Creation - Edmund the Elephant">
+                  <img class="examples" id="example19" src="images/example19.jpeg" alt="An Original Character Creation - Edmund the Elephant Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -480,7 +480,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example6" src="images/example6.png" alt="Stitch from Lilo and Stitch">
+                  <img class="examples" id="example6" src="images/example6.png" alt="Stitch from Lilo and Stitch Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -505,7 +505,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example10" src="images/example10.png" alt="Master Roshi from Dragonball Z">
+                  <img class="examples" id="example10" src="images/example10.png" alt="Master Roshi from Dragonball Z Amigurumi Doll">
 
                   <script>
                     // Get the modal
