--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 ; Title: reviews.html 
 ; Author: Chris Gorham
 ; Date Created: 11 Jan 2023
-; Last Updated: 04 Feb 2023
+; Last Updated: 11 Feb 2023
 ; Description: The code for the Florence Mae Gifts Reviews Page (reviews.html)
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
@@ -17,7 +17,7 @@
     
   <title>Reviews - Florence Mae Gifts - Premium Handmade Crochet Items</title>
   <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-  <meta name="description" content="Reviews of Florence Mae Gifts from Etsy, Facebook Marketplace, and more.">
+  <meta name="description" content="Reviews of Florence Mae Gifts items from Etsy, Facebook Marketplace, and more.">
   <meta http-equiv="author" content ="Chris Gorham">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
