--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 ; Title: about.html 
 ; Author: Chris Gorham
 ; Date Created: 11 Jan 2023
-; Last Updated: 04 Feb 2023
+; Last Updated: 11 Feb 2023
 ; Description: The code for the Florence Mae Gifts About The Artist page (about.html)
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
@@ -16,7 +16,7 @@
 
     <title>About The Artist - Florence Mae Gifts - Premium Handmade Crochet Items</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="All about the artist behind Florence Mae Gifts">
+    <meta name="description" content="All about the artist behind Florence Mae Gifts.">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
