--- a/disclaimers.html
+++ b/disclaimers.html
@@ -3,7 +3,7 @@
 ; Title: disclaimers.html 
 ; Author: Chris Gorham
 ; Date Created: 11 Jan 2023
-; Last Updates: 04 Feb 2023
+; Last Updates: 11 Feb 2023
 ; Description: The code for the Florence Mae Gifts Disclaimers page (disclaimers.html)
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
@@ -17,7 +17,7 @@
     
     <title>Disclaimers - Florence Mae Gifts - Premium Handmade Crochet Items</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Disclaimers and legal notices for the Florence Mae Gifts website">
+    <meta name="description" content="Disclaimers and legal notices for the Florence Mae Gifts website.">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
