--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <head>
 
     <title>About The Artist - Florence Mae Gifts - Premium Handmade Crochet Items</title>
-    <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
+    
     <meta name="description" content="All about the artist behind Florence Mae Gifts.">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
@@ -34,6 +34,8 @@
     <!--Favorites Icon-->
     <link rel="icon" href="images/favicon.png">
     
+    <!---Font Awesome Script-->
+    <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
 
     <!---The JavaScript source doe for the theme functions setDefaultTheme and setSelectedTheme-->
     <script src="theme.js"></script>
