--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
 <head>
     
   <title>Reviews - Florence Mae Gifts - Premium Handmade Crochet Items</title>
-  <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
+  
   <meta name="description" content="Reviews of Florence Mae Gifts items from Etsy, Facebook Marketplace, and more.">
   <meta http-equiv="author" content ="Chris Gorham">
   <meta charset="UTF-8">
@@ -35,6 +35,8 @@
   <!--Favorites Icon-->
   <link rel="icon" href="images/favicon.png">
   
+  <!---Font Awesome Script-->
+  <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
 
   <!---The JavaScript source doe for the theme functions setDefaultTheme and setSelectedTheme-->
   <script src="theme.js"></script>
