--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
 
 
         <hr>
-        <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information. Last Updated: February 04, 2023. <br><br>Website designed and maintained by <a href="http://www.chrisgorham.net" target="resource window">Chris Gorham</a>.</p>
+        <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information. Last Updated: February 04, 2023.</p>
         
         <div class="footer">
 
